--- a/feature_engineering.ipynb
+++ b/feature_engineering.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6b8b15ad",
+   "id": "05984e49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c1bd650",
+   "id": "47385bf8",
    "metadata": {},
    "source": [
     "## 1. Load the tips dataset.\n",
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "54eccf03",
+   "execution_count": 2,
+   "id": "3464fdb0",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "5       24.59  3.61  Female       0  Sun  Dinner     4       1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,19 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "31390b13",
+   "execution_count": 3,
+   "id": "6d57a72f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create new column tip_percentage\n",
-    "tips['tip_percentage'] = tips.tip / tips.total_bill"
+    "#create new column tip_percentage rounded to 2 decimal places\n",
+    "tips['tip_percentage'] = round(tips['tip'] / tips['total_bill'],2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "747b7985",
+   "execution_count": 4,
+   "id": "4f9ffccb",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,6 @@
        "      <th>size</th>\n",
        "      <th>dinner</th>\n",
        "      <th>tip_percentage</th>\n",
-       "      <th>price_per_person</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -207,8 +206,7 @@
        "      <td>Dinner</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.059447</td>\n",
-       "      <td>0.007737</td>\n",
+       "      <td>0.06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -220,24 +218,19 @@
        "      <td>Dinner</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.160542</td>\n",
-       "      <td>0.004709</td>\n",
+       "      <td>0.16</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   total_bill   tip     sex  smoker  day    time  size  dinner  \\\n",
-       "1       16.99  1.01  Female       0  Sun  Dinner     2       1   \n",
-       "2       10.34  1.66    Male       0  Sun  Dinner     3       1   \n",
-       "\n",
-       "   tip_percentage  price_per_person  \n",
-       "1        0.059447          0.007737  \n",
-       "2        0.160542          0.004709  "
+       "   total_bill   tip     sex  smoker  day    time  size  dinner  tip_percentage\n",
+       "1       16.99  1.01  Female       0  Sun  Dinner     2       1            0.06\n",
+       "2       10.34  1.66    Male       0  Sun  Dinner     3       1            0.16"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98939040",
+   "id": "2111c7ef",
    "metadata": {},
    "source": [
     "### 1b. Create a column named price_per_person. This should be the total bill divided by the party size."
@@ -257,18 +250,18 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "776fd819",
+   "id": "ca70f777",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create new column price_per_person\n",
-    "tips['price_per_person'] = tips.total_bill / tips.size"
+    "#create new column price_per_person, use brackets since size is a keyword\n",
+    "tips['price_per_person'] = (tips['total_bill']) / (tips['size'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "cf115685",
+   "execution_count": 6,
+   "id": "f78abba9",
    "metadata": {},
    "outputs": [
     {
@@ -315,8 +308,8 @@
        "      <td>Dinner</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.059447</td>\n",
-       "      <td>0.007737</td>\n",
+       "      <td>0.06</td>\n",
+       "      <td>8.495000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -328,8 +321,8 @@
        "      <td>Dinner</td>\n",
        "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.160542</td>\n",
-       "      <td>0.004709</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>3.446667</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -341,11 +334,11 @@
        "2       10.34  1.66    Male       0  Sun  Dinner     3       1   \n",
        "\n",
        "   tip_percentage  price_per_person  \n",
-       "1        0.059447          0.007737  \n",
-       "2        0.160542          0.004709  "
+       "1            0.06          8.495000  \n",
+       "2            0.16          3.446667  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52ece0e8",
+   "id": "644116eb",
    "metadata": {},
    "source": [
     "### 1c. Before using any of the methods discussed in the lesson, which features do you think would be most important for predicting the tip amount? The tip percentage?"
@@ -364,13 +357,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec0ff2b6",
+   "execution_count": 7,
+   "id": "4bcaa7ee",
    "metadata": {},
    "outputs": [],
    "source": [
     "# I think the total bill, size and time will be most important to get these amounts.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b377efc3",
+   "metadata": {},
+   "source": [
+    "### 1d.  Use select k best and recursive feature elimination to select the top 2 features for predicting tip amount. What are they?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7104749f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target = 'tip'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "755db7af",
+   "metadata": {},
+   "source": [
+    "### 1e. Use select k best and recursive feature elimination to select the top 2 features for predicting tip percentage. What are they?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "615cf19c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddba7a0c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "513df1ab",
+   "metadata": {},
+   "source": [
+    "### 1f. Why do you think select k best and recursive feature elimination might give different answers for the top features? Does this change as you change the number of features your are selecting?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "611d5c5d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d603c004",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3fde0083",
+   "metadata": {},
+   "source": [
+    "## 2. Write a function named select_kbest that takes in the predictors (X), the target (y), and the number of features to select (k) and returns the names of the top k selected features based on the SelectKBest class. Test your function with the tips dataset. You should see the same results as when you did the process manually."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fde6907",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db275587",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "addc0ae7",
+   "metadata": {},
+   "source": [
+    "## 3. Write a function named rfe that takes in the predictors, the target, and the number of features to select. It should return the top k features based on the RFE class. Test your function with the tips dataset. You should see the same results as when you did the process manually."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee3f88b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e194055e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88778ff3",
+   "metadata": {},
+   "source": [
+    "## 4. Load the swiss dataset and use all the other features to predict Fertility. Find the top 3 features using both select k best and recursive feature elimination (use the functions you just built to help you out)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a317cdf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
