--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "97d0b206",
    "metadata": {},
    "outputs": [],
@@ -38,6 +38,7 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.impute import SimpleImputer\n",
+    "\n",
     "import acquire"
    ]
   },
@@ -51,17 +52,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "03cea6f7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = acquire.get_zillow_data()"
+    "df = acquire.new_zillow_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "218676fb",
    "metadata": {},
    "outputs": [
@@ -166,7 +167,7 @@
        "4     2005.0    6941.39  6037.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "26a6e92c",
    "metadata": {},
    "outputs": [
@@ -187,7 +188,7 @@
        "(2152863, 7)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,12 +202,14 @@
    "id": "7c839550",
    "metadata": {},
    "source": [
+    "## 2. Using your acquired Zillow data, walk through the summarization and cleaning steps in your wrangle.ipynb file like we did above. You may handle the missing values however you feel is appropriate and meaninful; remember to document your process and decisions using markdown and code commenting where helpful.\n",
+    "\n",
     "### Do I like the column names?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "f98e1a0b",
    "metadata": {},
    "outputs": [
@@ -218,7 +221,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "85a28ce3",
    "metadata": {},
    "outputs": [],
@@ -245,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "86530938",
    "metadata": {},
    "outputs": [
@@ -343,7 +346,7 @@
        "4       4.0        2.0       3633.0   296425.0      2005.0    6941.39  6037.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "fc8c2873",
    "metadata": {},
    "outputs": [
@@ -422,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "1989549a",
    "metadata": {},
    "outputs": [
@@ -460,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "9008ffd3",
    "metadata": {},
    "outputs": [],
@@ -488,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "28822e5a",
    "metadata": {},
    "outputs": [
@@ -668,7 +671,7 @@
        "[1855285 rows x 7 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "cad5b049",
    "metadata": {},
    "outputs": [
@@ -740,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "2feab039",
    "metadata": {},
    "outputs": [
@@ -792,7 +795,7 @@
    "metadata": {},
    "source": [
     "### Takeaways\n",
-    "- some extream values are still present in the data\n",
+    "- some exstream values are still present in the data\n",
     "***************************************************************************************\n",
     "## Prepare\n",
     "- Are there any null values?"
@@ -800,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "d89a6900",
    "metadata": {},
    "outputs": [
@@ -817,7 +820,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "e79dd6ed",
    "metadata": {},
    "outputs": [
@@ -850,7 +853,7 @@
        "Name: year_built, Length: 152, dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "0dfcf09d",
    "metadata": {},
    "outputs": [
@@ -904,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "id": "19fb0859",
    "metadata": {},
    "outputs": [
@@ -1025,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "id": "39133d9f",
    "metadata": {},
    "outputs": [],
@@ -1036,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 21,
    "id": "3a5016c2",
    "metadata": {},
    "outputs": [
@@ -1079,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 22,
    "id": "195dbedf",
    "metadata": {},
    "outputs": [],
@@ -1097,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "id": "50208b99",
    "metadata": {},
    "outputs": [],
@@ -1116,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "id": "612a4072",
    "metadata": {},
    "outputs": [],
@@ -1133,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "id": "18436c8a",
    "metadata": {},
    "outputs": [
@@ -1149,7 +1152,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1160,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "id": "ee6a25b9",
    "metadata": {},
    "outputs": [
@@ -1176,7 +1179,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1501,12 +1504,192 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d312922c",
+   "metadata": {},
+   "source": [
+    "## 3.  Store all of the necessary functions to automate your process from acquiring the data to returning a cleaned dataframe witn no missing values in your wrangle.py file. Name your final function wrangle_zillow."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121d0061",
+   "id": "c2bedd86",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "'''Wrangles data from Zillow Database'''\n",
+    "\n",
+    "##################################################Wrangle.py###################################################\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "from env import user, password, host\n",
+    "\n",
+    "#**************************************************Acquire*******************************************************\n",
+    "\n",
+    "def acquire_zillow():\n",
+    "    ''' Acquire data from Zillow using env imports and rename columns'''\n",
+    "    \n",
+    "    url = f\"mysql+pymysql://{user}:{password}@{host}/zillow\"\n",
+    "    \n",
+    "    query = \"\"\"\n",
+    "            \n",
+    "    SELECT bedroomcnt, bathroomcnt, calculatedfinishedsquarefeet, taxvaluedollarcnt, yearbuilt, taxamount, fips\n",
+    "    FROM properties_2017\n",
+    "\n",
+    "    LEFT JOIN propertylandusetype USING(propertylandusetypeid)\n",
+    "\n",
+    "    WHERE propertylandusedesc IN (\"Single Family Residential\",                       \n",
+    "                                  \"Inferred Single Family Residential\")\"\"\"\n",
+    "\n",
+    "    # get dataframe of data\n",
+    "    df = pd.read_sql(query, url)\n",
+    "    \n",
+    "    \n",
+    "    # renaming column names to one's I like better\n",
+    "    df = df.rename(columns = {'bedroomcnt':'bedrooms', \n",
+    "                              'bathroomcnt':'bathrooms', \n",
+    "                              'calculatedfinishedsquarefeet':'area',\n",
+    "                              'taxvaluedollarcnt':'tax_value', \n",
+    "                              'yearbuilt':'year_built',})\n",
+    "    return df\n",
+    "\n",
+    "#**************************************************Remove Outliers*******************************************************\n",
+    "\n",
+    "def remove_outliers(df, k, col_list):\n",
+    "    ''' remove outliers from a list of columns in a dataframe \n",
+    "        and return that dataframe\n",
+    "    '''\n",
+    "    \n",
+    "    for col in col_list:\n",
+    "\n",
+    "        q1, q3 = df[col].quantile([.25, .75])  # get quartiles\n",
+    "        \n",
+    "        iqr = q3 - q1   # calculate interquartile range\n",
+    "        \n",
+    "        upper_bound = q3 + k * iqr   # get upper bound\n",
+    "        lower_bound = q1 - k * iqr   # get lower bound\n",
+    "\n",
+    "        # return dataframe without outliers\n",
+    "        \n",
+    "        df = df[(df[col] > lower_bound) & (df[col] < upper_bound)]\n",
+    "        \n",
+    "    return df\n",
+    "\n",
+    "#**************************************************Distributions*******************************************************\n",
+    "\n",
+    "def get_hist(df):\n",
+    "    ''' Gets histographs of acquired continuous variables'''\n",
+    "    \n",
+    "    plt.figure(figsize=(16, 3))\n",
+    "\n",
+    "    # List of columns\n",
+    "    cols = [col for col in df.columns if col not in ['fips', 'year_built']]\n",
+    "\n",
+    "    for i, col in enumerate(cols):\n",
+    "\n",
+    "        # i starts at 0, but plot nos should start at 1\n",
+    "        plot_number = i + 1 \n",
+    "\n",
+    "        # Create subplot.\n",
+    "        plt.subplot(1, len(cols), plot_number)\n",
+    "\n",
+    "        # Title with column name.\n",
+    "        plt.title(col)\n",
+    "\n",
+    "        # Display histogram for column.\n",
+    "        df[col].hist(bins=5)\n",
+    "\n",
+    "        # Hide gridlines.\n",
+    "        plt.grid(False)\n",
+    "\n",
+    "        # turn off scientific notation\n",
+    "        plt.ticklabel_format(useOffset=False)\n",
+    "\n",
+    "        plt.tight_layout()\n",
+    "\n",
+    "    plt.show()\n",
+    "        \n",
+    "        \n",
+    "def get_box(df):\n",
+    "    ''' Gets boxplots of acquired continuous variables'''\n",
+    "    \n",
+    "    # List of columns\n",
+    "    cols = ['bedrooms', 'bathrooms', 'area', 'tax_value', 'taxamount']\n",
+    "\n",
+    "    plt.figure(figsize=(16, 3))\n",
+    "\n",
+    "    for i, col in enumerate(cols):\n",
+    "\n",
+    "        # i starts at 0, but plot should start at 1\n",
+    "        plot_number = i + 1 \n",
+    "\n",
+    "        # Create subplot.\n",
+    "        plt.subplot(1, len(cols), plot_number)\n",
+    "\n",
+    "        # Title with column name.\n",
+    "        plt.title(col)\n",
+    "\n",
+    "        # Display boxplot for column.\n",
+    "        sns.boxplot(data=df[[col]])\n",
+    "\n",
+    "        # Hide gridlines.\n",
+    "        plt.grid(False)\n",
+    "\n",
+    "        # sets proper spacing between plots\n",
+    "        plt.tight_layout()\n",
+    "\n",
+    "    plt.show()\n",
+    "        \n",
+    "#**************************************************Prepare*******************************************************\n",
+    "\n",
+    "def prepare_zillow(df):\n",
+    "    ''' Prepare zillow data for exploration'''\n",
+    "\n",
+    "    # removing outliers\n",
+    "    df = remove_outliers(df, 1.5, ['bedrooms', 'bathrooms', 'area', 'tax_value', 'taxamount'])\n",
+    "    \n",
+    "    # get distributions of numeric data\n",
+    "    get_hist(df)\n",
+    "    get_box(df)\n",
+    "    \n",
+    "    # converting column datatypes\n",
+    "    df.fips = df.fips.astype(object)\n",
+    "    df.year_built = df.year_built.astype(object)\n",
+    "    \n",
+    "    # drop taxamount\n",
+    "    df = df.drop(columns = 'taxamount')\n",
+    "    \n",
+    "    # train/validate/test split\n",
+    "    train_validate, test = train_test_split(df, test_size=.2, random_state=123)\n",
+    "    train, validate = train_test_split(train_validate, test_size=.3, random_state=123)\n",
+    "    \n",
+    "    # impute year built using mode\n",
+    "    imputer = SimpleImputer(strategy='most_frequent')\n",
+    "\n",
+    "    imputer.fit(train[['year_built']])\n",
+    "\n",
+    "    train[['year_built']] = imputer.transform(train[['year_built']])\n",
+    "    validate[['year_built']] = imputer.transform(validate[['year_built']])\n",
+    "    test[['year_built']] = imputer.transform(test[['year_built']])       \n",
+    "    \n",
+    "    return train, validate, test    \n",
+    "\n",
+    "#**************************************************Wrangle*******************************************************\n",
+    "\n",
+    "def wrangle_zillow():\n",
+    "    '''Acquire and prepare data from Zillow database for explore'''\n",
+    "    train, validate, test = prepare_zillow(acquire_zillow())\n",
+    "    \n",
+    "    return train, validate, test"
+   ]
   }
  ],
  "metadata": {
