--- a/scaling.ipynb
+++ b/scaling.ipynb
@@ -1299,9 +1299,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "022bd629",
+   "metadata": {},
+   "source": [
+    "### Scaling Takeaways:\n",
+    "\n",
+    "- Handle outliers first (unless you know that you want to use a non-linear (e.g. Quantile Transformer)) scaling\n",
+    "- Min-Max Scaler will transform each value in the column proportionally within the desireable range (usually [0,1]). - Use this as the your first choice to scale. It will preserve the shape of the distribution (no distortion).\n",
+    "- Standard Scaler will transform each value in the column to range about the mean 0 and standard deviation 1, Use - - StandardScaler if you know the data distribution is normal.\n",
+    "- If there are outliers (which you don't want to discard), use RobustScaler. Alternatively you could remove the outliers and use either of the above 2 scalers\n",
+    "- Good practice to visualize the distribution of variables after scaling (make sure the transformation you were hoping for actually happened)\n",
+    "- Use non-linear scalers when you really have to (e.g.Quantiler Transformer when you must have data normally distributed).\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3d804d0",
+   "id": "aa6b9bbe",
    "metadata": {},
    "outputs": [],
    "source": []
