--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -241,7 +241,7 @@
     "# renaming columns\n",
     "df = df.rename(columns = {'bedroomcnt':'bedrooms', \n",
     "                          'bathroomcnt':'bathrooms', \n",
-    "                          'calculatedfinishedsquarefeet':'square_feet',\n",
+    "                          'calculatedfinishedsquarefeet':'sqft',\n",
     "                          'taxvaluedollarcnt':'tax_value', \n",
     "                          'yearbuilt':'year_built'})"
    ]
@@ -677,7 +677,7 @@
     }
    ],
    "source": [
-    "df = remove_outliers(df, 1.5, ['bedrooms', 'bathrooms', 'square_feet', 'tax_value', 'taxamount'])\n",
+    "df = remove_outliers(df, 1.5, ['bedrooms', 'bathrooms', 'sqft', 'tax_value', 'taxamount'])\n",
     "df"
    ]
   },
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d312922c",
+   "id": "cddd1a2e",
    "metadata": {},
    "source": [
     "## 3.  Store all of the necessary functions to automate your process from acquiring the data to returning a cleaned dataframe witn no missing values in your wrangle.py file. Name your final function wrangle_zillow."
@@ -1514,7 +1514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2bedd86",
+   "id": "12d68793",
    "metadata": {},
    "outputs": [],
    "source": [
